api spec 시큐리티 없이까지 적용, 스웨거일때 500오류에 대한것 일괄적으로 보도록 수정(consumerTypeHeaderOpenAPICustomiser)
